added libgdal to environment, moved rasterio to pip

--- a/notebooks/hello_world.ipynb
+++ b/notebooks/hello_world.ipynb
@@ -8,10 +8,15 @@
    "source": [
     "# Import some python libraries\n",
     "%matplotlib inline\n",
-    "\n",
+    "import rasterio\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Setup a dask cluster\n",
+    "import dask\n",
+    "from dask.distributed import Client\n",
+    "from dask_kubernetes import KubeCluster"
    ]
   },
   {
@@ -20,30 +25,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup a dask cluster\n",
-    "from dask.distributed import Client\n",
-    "from dask_kubernetes import KubeCluster\n",
+    "# Print package versions\n",
+    "\n",
+    "print('Dask version: ', dask.__version__)\n",
+    "print('Xarray version: ', xr.__version__)\n",
+    "print('Rasterio version: ', rasterio.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Launch Dask Cluster\n",
     "\n",
     "cluster = KubeCluster(n_workers=10)\n",
-    "cluster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "cluster\n",
     "client = Client(cluster)\n",
     "client"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (pangeo)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pangeo"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -55,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
